--- a/samples/hello_ar_java/app/src/main/AndroidManifest.xml
+++ b/samples/hello_ar_java/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="false"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".SettingsMenuActivity"></activity>
         <activity android:name=".OwnedMenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
